<resources>
    <string name="app_name">MotoHunt</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="team">Team Name</string>
    <string name="button">Set our MotoTeam!</string>
    <string name="set_moto_team_button">1,2,3 MotoTeam!</string>
    <string name="finish_button">Finish!</string>
    <string name="answer_hint">Write Your answer here</string>
    <string name="name_team_member">Team member</string>
    <string name="cancel_dialog_btn">Cancel</string>
    <string name="continue_dialog_btn">Got it!</string>
    <string name="ans_string_arr">One of the names is not correct</string>
    <string name="end_activity">Success! Good job!</string>
    <string name="empty_field">Check the names or fill the blank fields in MotoTask!</string>
    <string name="didnt_finish">Please fill the blank fields the MotoTask!</string>
    <string name="flash_option">For flash use volume up key</string>
    <string name="wrong_qr_code">Oops i can\'t scan it</string>
    <string name="try_again">Try again</string>
    <string name="wrong_number">Wrong number ! try again</string>
    <string name="mission_1_content">Each group member must write on a separate page the following data about himself</string>
    <string name="mission_1_address">1.Address</string>
    <string name="mission_1_duration">2.Duration of work at Motorola</string>
    <string name="mission_1_children">3.Number of children</string>
    <string name="mission_1_challenge">For each category, you must take a photo in ascending order and send the photos to Dor Perets\n050-9628408</string>
    <string name="photo_mission_1_challenge">Take the photos with the paper that you wrote the info on</string>
    <string name="mission_three_content">You must arrange the answers in the order that the device was released to the industry</string>
    <string name="mission_1">Here Is Your First Mission!</string>
    <string name="mission_2">Here Is Your Second Mission!</string>
    <string name="mission_3">Here Is Your Third Mission!</string>
    <string name="mission_4">Mark Right/Wrong for each sentence</string>
    <string name="mission_5">Here Is Your Fifth Mission!</string>
    <string name="mission_6">Here Is Your Sixth Mission!</string>
    <string name="mission_7">Here Is Your Seventh Mission!</string>
    <string name="mission_7_content_text">You have to film someone that will say the Motorola vision sentence</string>
    <string name="mission_8">Here Is Your Eight And Last Mission!</string>
    <string name="answer_a">A!</string>
    <string name="answer_b">B!</string>
    <string name="answer_c">C!</string>
    <string name="answer_d">D!</string>
    <string name="answer_e">E!</string>
    <string name="answer_f">F!</string>
    <string name="answer_g">G!</string>
    <string name="answer_h">H!</string>
    <string name="answer_i">I!</string>
    <string name="answer_1_mirs">Mirs</string>
    <string name="answer_2_apx_next">APX Next</string>
    <string name="answer_3_prince">Prince</string>
    <string name="answer_4_lex">Lex</string>
    <string name="answer_5_stryker">Stryker</string>
    <string name="answer_1">Motorola\'s "big split" happened in 2010</string>
    <string name="answer_2">Motorola was founded in 1939</string>
    <string name="answer_3">The first branch of Motorola outside the USA was in Israel</string>
    <string name="answer_4">The name of the IDF system established in Motorola is "Shoshanat Harim"</string>
    <string name="answer_5">The first CEO of Motorola Israel was "Moshe Bassin"</string>
    <string name="answer_6">Motorola radios were a significant player in WWI</string>
    <string name="answer_7">In 1956, the Motorola company produced the tracking device for the first time</string>
    <string name="answer_8">Using a Motorola receiver, Neil Armstrong broadcast his words to the whole world from the moon</string>
    <string name="answer_9">Motorola brought the first cell phone to the world - "Celephone"</string>
    <string name="answer_10">Paul Galvin is the founder of Motorola</string>

    <string-array name="options_list">
        <item>Asaf Erdman</item>
        <item>Esti Kadison</item>
        <item>Evitar Guetta</item>
        <item>Eitan Tugy</item>
        <item>Dor Perets</item>
        <item>Yulia Louzon</item>
        <item>Yossi Ben-Ari</item>
        <item>Yoram Zeev</item>
        <item>Eilon Eyal</item>
        <item>Yakir Nahum</item>
        <item>Lior Ashkenazy</item>
        <item>Alexandr Spivak</item>
        <item>Ella Grad</item>
        <item>Hodaya Sror</item>
        <item>Adam Gilboa</item>
        <item>Avner Carmeli</item>
        <item>Yehuda Aleiner</item>
        <item>Kfir Hayman</item>
        <item>Leonid Nikolaev</item>
        <item>Oren Afriat</item>
        <item>Alex Friedman</item>
        <item>Andrei Aluf</item>
        <item>Eylon Heiman</item>
        <item>Dvir Gozlan</item>
        <item>Konstantin Karasik</item>
        <item>Amit Aroch</item>
        <item>David Ben-Ari</item>
        <item>Guy Burko</item>
        <item>Leonid Avdeev</item>
        <item>Ronit Peleg</item>
        <item>Neomi Sher</item>
        <item>Pavlo Yaroshevich</item>
        <item>Svetlana Dimenshtein</item>
        <item>Chen Carmiel</item>
        <item>Sigalit Leybman</item>
        <item>Yossi Mizrahi</item>
        <item>Igor Gorodetsky</item>
        <item>Alon Meron</item>
        <item>Alena Auslender</item>
        <item>Eden Herman</item>
        <item>Michael Medvedev</item>
        <item>Rita Gurevich</item>
        <item>lior medina</item>
        <item>Anna Gilerman</item>
        <item>Peretz Mahal</item>
        <item>Rafi Tzidon</item>
        <item>Snir Sadd</item>
        <item>Eitan Chaimovich</item>
        <item>Maayan Maya BenGal</item>
        <item>Liron Meshulami</item>
        <item>Hanania Zarour</item>
        <item>Michael Madar</item>
        <item>Daniil Bredesku</item>
        <item>Michael Rakhman</item>
        <item>Oleg Olshanechky</item>
        <item>Pavel Kotiai</item>
        <item>Maksym Symonov</item>
        <item>Guy Rosen</item>
        <item>Benny Malka</item>
        <item>Hadad Maor</item>
        <item>Rais Or Tsof</item>
        <item>Mihail Gadasin</item>
        <item>Meitar Kahlon</item>
        <item>Alexander Parfenchikov</item>
        <item>Talmor Ben-David</item>
        <item>Yarin Halili</item>
    </string-array>

    <string-array name="context_route">
        <item>A</item>
        <item>B</item>
    </string-array>


    <string-array name="questions_list_guess_who">
        <item>Lives in Dafna</item>
        <item>Allergic to peanuts</item>
        <item>Movie director &amp; producer</item>
        <item>Father of Israeli Judo\'s champion (youth)</item>
        <item>Met his wife at Motorola</item>
        <item>Lived in USA for 5 years</item>
        <item>Crossfit trainer</item>
        <item>Performed (amazingly) with Eli &amp; Mariano on stage</item>
        <item>Married to kindergarten teacher and acts like a child</item>
        <item>Speaks German fluently</item>
        <item>Starring in Motorola\'s basketball team</item>
        <item>Got engaged 2 weeks ago! (Congratulations!)</item>
        <item>Wedding postponed <b><i>twice</i></b> due to Covid-19</item>
        <item>Living in Zichron Yaakov, together with bark of pine trees</item>
        <item>placeholder_answer_15</item>
        <item>placeholder_answer_16</item>
    </string-array>

    <string-array name="answer_list_guess_who">
        <item>Eilon Eyal</item>
        <item>Liron Meshulami</item>
        <item>David Ben-Ari</item>
        <item>Guy Burko</item>
        <item>Alex Friedman</item>
        <item>Talmor Ben-David</item>
        <item>Meitar Kahlon</item>
        <item>Maayan Maya BenGal</item>
        <item>Yakir Nahum</item>
        <item>Alexander Parfenchikov</item>
        <item>Michael Madar</item>
        <item>Sigalit Laybman</item>
        <item>Dor Perets</item>
        <item>Adam Gilboa</item>
        <item>placeholder_question_15</item>
        <item>placeholder_question_16</item>
    </string-array>

</resources>