<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TeamSetActivity">

    <include
        android:id="@+id/include_app_bar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="44dp"
        tools:ignore="MissingConstraints">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/moto_hunt_logo"
            android:layout_width="240dp"
            android:layout_height="80dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/motohunt_logo"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/team_name_input"
            android:layout_width="333dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/team"
            android:inputType="textPersonName"
            android:imeOptions="actionDone"
            android:singleLine="true"
            tools:ignore="DuplicateSpeakableTextCheck" />


        <EditText
            android:id="@+id/team_member_name1"
            android:layout_width="333dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/name_team_member"
            android:inputType="textPersonName"
            android:imeOptions="actionDone"
            android:singleLine="true"
            tools:ignore="Autofill,DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/team_member_name2"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/name_team_member"
            android:inputType="textPersonName"
            android:imeOptions="actionDone"
            android:singleLine="true"
            tools:ignore="Autofill,DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/team_member_name3"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/name_team_member"
            android:inputType="textPersonName"
            android:imeOptions="actionDone"
            android:singleLine="true"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/team_member_name4"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/name_team_member"
            android:inputType="textPersonName"
            android:imeOptions="actionDone"
            android:singleLine="true"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/team_member_name5"
            android:layout_width="337dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/name_team_member"
            android:inputType="textPersonName"
            android:imeOptions="actionDone"
            android:singleLine="true"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/team_member_name6"
            android:layout_width="337dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/name_team_member"
            android:inputType="textPersonName"
            android:imeOptions="actionDone"
            android:singleLine="true"
            tools:ignore="Autofill" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/set_your_team_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/btn_shape"
            android:text="@string/set_moto_team_button"
            android:textColor="@color/white" />

    </LinearLayout>
    </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>