<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MissionManagerClass">


    <include
        android:id="@+id/include_app_bar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/mission_welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mission_3"
        android:textColor="@color/motoBlue"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086"
        tools:ignore="HardcodedText,MissingConstraints" />


    <EditText
        android:id="@+id/mission_three_input1"
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:gravity="center"
        android:hint="@string/answer_hint"
        android:imeOptions="flagNoExtractUi"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include_app_bar"
        app:layout_constraintVertical_bias="0.312"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/mission_three_input2"
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:gravity="center"
        android:hint="@string/answer_hint"
        android:imeOptions="flagNoExtractUi"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include_app_bar"
        app:layout_constraintVertical_bias="0.412"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/mission_three_input3"
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:gravity="center"
        android:hint="@string/answer_hint"
        android:imeOptions="flagNoExtractUi"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include_app_bar"
        app:layout_constraintVertical_bias="0.512"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/mission_three_input4"
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:gravity="center"
        android:hint="@string/answer_hint"
        android:imeOptions="flagNoExtractUi"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include_app_bar"
        app:layout_constraintVertical_bias="0.612"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/mission_three_input5"
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:gravity="center"
        android:hint="@string/answer_hint"
        android:imeOptions="flagNoExtractUi"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include_app_bar"
        app:layout_constraintVertical_bias="0.712"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/finish_mission_three_button"
        android:layout_width="337dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_shape"
        android:padding="10dp"
        android:text="@string/finish_button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/include_app_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>